--- a/AdventureGameBuilder/src/edu/augustana/csc285/gamebuilder/MainPane.fxml
+++ b/AdventureGameBuilder/src/edu/augustana/csc285/gamebuilder/MainPane.fxml
@@ -5,6 +5,8 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -27,18 +29,36 @@
   </menus>
 </MenuBar>
    </top>
-   <left>
-<AnchorPane BorderPane.alignment="CENTER">
-   <children>
-      <Label layoutX="193.0" layoutY="143.0" text="Game builder...">
-         <font>
-            <Font name="System Bold" size="21.0" />
-         </font>
-      </Label>
-      <Button fx:id="addSlideButton" layoutX="30.0" layoutY="47.0" mnemonicParsing="false" onAction="#handleAddSlideButton" text="Add Slide" />
-      <TextField fx:id="showSlideAtTextField" layoutX="177.0" layoutY="112.0" onAction="#handleShowSlideAtTextField" prefHeight="31.0" prefWidth="32.0" />
-            <Button fx:id="showSlideAtButton" layoutX="30.0" layoutY="112.0" mnemonicParsing="false" onAction="#handleShowSlideAtButton" text="Show Slide At" />
-   </children>
-</AnchorPane>
-   </left>
+   <center>
+      <TabPane prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
+        <tabs>
+          <Tab text="Main Builder">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                  <AnchorPane layoutY="-15.0" prefHeight="359.0" prefWidth="529.0">
+                     <children>
+                        <Label layoutX="177.0" layoutY="143.0" text="Game builder...">
+                           <font>
+                              <Font name="System Bold" size="21.0" />
+                           </font>
+                        </Label>
+                        <Button fx:id="addSlideButton" layoutX="30.0" layoutY="47.0" mnemonicParsing="false" onAction="#handleAddSlideButton" text="Add Slide" />
+                        <TextField fx:id="showSlideAtTextField" layoutX="177.0" layoutY="112.0" onAction="#handleShowSlideAtTextField" prefHeight="31.0" prefWidth="32.0" />
+                              <Button fx:id="showSlideAtButton" layoutX="37.0" layoutY="184.0" mnemonicParsing="false" onAction="#handleShowSlideAtButton" text="This is broken" />
+                              <Label layoutX="46.0" layoutY="117.0" text="Show Slide info at.." />
+                     </children>
+                  </AnchorPane>
+                     </children>
+                  </AnchorPane>
+            </content>
+          </Tab>
+          <Tab text="Room Editor">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+            </content>
+          </Tab>
+        </tabs>
+      </TabPane>
+   </center>
 </BorderPane>
