--- a/AdventureGameBuilder/src/edu/augustana/csc285/gamebuilder/MainPane.fxml
+++ b/AdventureGameBuilder/src/edu/augustana/csc285/gamebuilder/MainPane.fxml
@@ -45,7 +45,7 @@
                         </Label>
                         <Button fx:id="addSlideButton" layoutX="30.0" layoutY="47.0" mnemonicParsing="false" onAction="#handleAddSlideButton" text="Add Slide" />
                         <TextField fx:id="showSlideAtTextField" layoutX="177.0" layoutY="112.0" onAction="#handleShowSlideAtTextField" prefHeight="31.0" prefWidth="73.0" />
-                              <Button fx:id="showSlideAtButton" layoutX="37.0" layoutY="184.0" mnemonicParsing="false" onAction="#handleShowSlideAtButton" text="This is broken" />
+                              <Button fx:id="showSlideListButton" layoutX="37.0" layoutY="184.0" mnemonicParsing="false" onAction="#handleShowSlideListButton" text="Show Slide List" />
                               <Label layoutX="46.0" layoutY="117.0" text="Show Slide info at.." />
                      </children>
                   </AnchorPane>
