--- a/AdventureGameBuilder/src/edu/augustana/csc285/gamebuilder/MainPane.fxml
+++ b/AdventureGameBuilder/src/edu/augustana/csc285/gamebuilder/MainPane.fxml
@@ -38,7 +38,7 @@
                      <children>
                   <AnchorPane layoutY="-15.0" prefHeight="359.0" prefWidth="529.0">
                      <children>
-                        <Label layoutX="177.0" layoutY="143.0" text="Game builder...">
+                        <Label layoutX="156.0" layoutY="24.0" text="Game builder...">
                            <font>
                               <Font name="System Bold" size="21.0" />
                            </font>
@@ -53,9 +53,15 @@
                   </AnchorPane>
             </content>
           </Tab>
-          <Tab text="Room Editor">
+          <Tab text="Slide Editor">
             <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <Label layoutX="24.0" layoutY="39.0" text="Select Slide Number: " />
+                        <TextField fx:id="selectSlideNumberTextField" layoutX="173.0" layoutY="34.0" onAction="#handleSelectSlideNumberTextField" prefHeight="31.0" prefWidth="58.0" />
+                        <Label layoutX="289.0" layoutY="39.0" text="Current Slide:" />
+                        <Label fx:id="currentSlideLabel" layoutX="405.0" layoutY="39.0" text="N/A" />
+                     </children></AnchorPane>
             </content>
           </Tab>
         </tabs>
