--- a/AdventureGameBuilder/src/edu/augustana/csc285/gamebuilder/MainPane.fxml
+++ b/AdventureGameBuilder/src/edu/augustana/csc285/gamebuilder/MainPane.fxml
@@ -7,9 +7,11 @@
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
 <BorderPane prefHeight="400.0" prefWidth="529.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.augustana.csc285.gamebuilder.MainPaneController">
@@ -57,10 +59,16 @@
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <Label layoutX="24.0" layoutY="39.0" text="Select Slide Number: " />
-                        <TextField fx:id="selectSlideNumberTextField" layoutX="173.0" layoutY="34.0" onAction="#handleSelectSlideNumberTextField" prefHeight="31.0" prefWidth="58.0" />
-                        <Label layoutX="289.0" layoutY="39.0" text="Current Slide:" />
-                        <Label fx:id="currentSlideLabel" layoutX="405.0" layoutY="39.0" text="N/A" />
+                        <Label layoutX="24.0" layoutY="29.0" text="Select Slide Number: " />
+                        <TextField fx:id="selectSlideNumberTextField" layoutX="175.0" layoutY="24.0" onAction="#handleSelectSlideNumberTextField" prefHeight="31.0" prefWidth="58.0" />
+                        <Label layoutX="289.0" layoutY="29.0" text="Current Slide:" />
+                        <Label fx:id="currentSlideLabel" layoutX="405.0" layoutY="29.0" text="N/A" />
+                        <Label layoutX="14.0" layoutY="93.0" text="Set Slide Title" />
+                        <TextField fx:id="changeTitleTextField" layoutX="129.0" layoutY="88.0" onAction="#handleChangeTitleTextField" prefHeight="19.0" prefWidth="376.0" />
+                        <Line endX="440.0" layoutX="95.0" layoutY="71.0" startX="-100.0" AnchorPane.bottomAnchor="257.5" AnchorPane.leftAnchor="-5.5" AnchorPane.rightAnchor="333.5" AnchorPane.topAnchor="70.5" />
+                        <Label layoutX="14.0" layoutY="130.0" text="Set Slide Game Text" />
+                        <TextArea fx:id="setGameTextArea" layoutX="166.0" layoutY="130.0" prefHeight="110.0" prefWidth="214.0" />
+                        <Button fx:id="submitButton" layoutX="37.0" layoutY="165.0" mnemonicParsing="false" onAction="#handleSubmitButton" text="Submit" />
                      </children></AnchorPane>
             </content>
           </Tab>
