--- a/AdventureGameBuilder/src/edu/augustana/csc285/gamebuilder/MainPane.fxml
+++ b/AdventureGameBuilder/src/edu/augustana/csc285/gamebuilder/MainPane.fxml
@@ -83,6 +83,10 @@
                         <Label layoutX="220.0" layoutY="21.0" text="Current Slide:" />
                         <Label fx:id="currentSlideLabel1" layoutX="316.0" layoutY="21.0" text="N/A" />
                         <TextField fx:id="selectSlideNumberTextField1" layoutX="156.0" layoutY="16.0" onAction="#handleSelectSlideNumberTextField1" prefHeight="31.0" prefWidth="46.0" />
+                        <Label layoutX="14.0" layoutY="62.0" text="Select Action Choice Index:" />
+                        <TextField fx:id="selectActionChoiceTextField" layoutX="202.0" layoutY="57.0" onAction="#handleSelectActionChoiceTextField" prefHeight="31.0" prefWidth="64.0" />
+                        <Label layoutX="269.0" layoutY="62.0" text="Current Action Choice:" />
+                        <Label fx:id="currentACLabel" layoutX="425.0" layoutY="62.0" text="N/A" />
                      </children>
                   </AnchorPane>
               </content>
