--- a/AdventureGameBuilder/src/edu/augustana/csc285/gamebuilder/MainPane.fxml
+++ b/AdventureGameBuilder/src/edu/augustana/csc285/gamebuilder/MainPane.fxml
@@ -67,11 +67,13 @@
                         <TextField fx:id="changeTitleTextField" layoutX="129.0" layoutY="88.0" onAction="#handleChangeTitleTextField" prefHeight="19.0" prefWidth="376.0" />
                         <Line endX="440.0" layoutX="95.0" layoutY="71.0" startX="-100.0" AnchorPane.bottomAnchor="257.5" AnchorPane.leftAnchor="-5.5" AnchorPane.rightAnchor="333.5" AnchorPane.topAnchor="70.5" />
                         <Label layoutX="14.0" layoutY="130.0" text="Set Slide Game Text" />                 
-                        <Button fx:id="selectSlideImageButton" layoutX="259.0" layoutY="189.0" mnemonicParsing="false" onAction="#handleSelectSlideImageButton" text="Select a Slide Image" />
+                        <Button fx:id="selectSlideImageButton" layoutX="231.0" layoutY="165.0" mnemonicParsing="false" onAction="#handleSelectSlideImageButton" text="Select a Slide Image" />
                         <TextArea fx:id="setGameTextArea" layoutX="14.0" layoutY="156.0" prefHeight="110.0" prefWidth="214.0" />
                         <Button fx:id="submitButton" layoutX="14.0" layoutY="274.0" mnemonicParsing="false" onAction="#handleSubmitButton" text="Submit" />
-                        <Button fx:id="addActionChoiceButton" layoutX="260.0" layoutY="136.0" mnemonicParsing="false" onAction="#handleAddActionChoiceButton" text="Add Action Choice " />
-                        <Button fx:id="showSlideInfoButton" layoutX="256.0" layoutY="251.0" mnemonicParsing="false" onAction="#handleShowSlideInfoButton" text="Show Slide Info" />
+                        <Button fx:id="addActionChoiceButton" layoutX="234.0" layoutY="125.0" mnemonicParsing="false" onAction="#handleAddActionChoiceButton" text="Add Action Choice " />
+                        <Button fx:id="showSlideInfoButton" layoutX="233.0" layoutY="204.0" mnemonicParsing="false" onAction="#handleShowSlideInfoButton" text="Show Slide Info" />
+                        <Label layoutX="234.0" layoutY="245.0" text="Remove Slide at Index:" />
+                        <TextField fx:id="removeSlideTextField" layoutX="390.0" layoutY="240.0" onAction="#handleRemoveSlideTextField" prefHeight="11.0" prefWidth="57.0" />
                      </children></AnchorPane>
             </content>
           </Tab>
