--- a/AdventureGameBuilder/src/edu/augustana/csc285/gamebuilder/MainPane.fxml
+++ b/AdventureGameBuilder/src/edu/augustana/csc285/gamebuilder/MainPane.fxml
@@ -49,7 +49,8 @@
                         <TextField fx:id="showSlideAtTextField" layoutX="177.0" layoutY="112.0" onAction="#handleShowSlideAtTextField" prefHeight="31.0" prefWidth="73.0" />
                               <Button fx:id="showSlideListButton" layoutX="37.0" layoutY="184.0" mnemonicParsing="false" onAction="#handleShowSlideListButton" text="Show Slide List" />
                               <Label layoutX="46.0" layoutY="117.0" text="Show Slide info at.." />
-                              <Button fx:id="saveButton" layoutX="43.0" layoutY="257.0" mnemonicParsing="false" onAction="#handleSaveButton" prefHeight="25.0" prefWidth="157.0" text="Save" />
+                              <Button fx:id="saveButton" layoutX="37.0" layoutY="236.0" mnemonicParsing="false" onAction="#handleSaveButton" prefHeight="25.0" prefWidth="157.0" text="Save" />
+                              <Button fx:id="saveAsButton" layoutX="297.0" layoutY="197.0" mnemonicParsing="false" onAction="#handleSaveAsButton" text="SaveAs" />
                      </children>
                   </AnchorPane>
                      </children>
