--- a/AdventureGameBuilder/src/edu/augustana/csc285/gamebuilder/PreviewPane.fxml
+++ b/AdventureGameBuilder/src/edu/augustana/csc285/gamebuilder/PreviewPane.fxml
@@ -3,11 +3,14 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.60">
+<AnchorPane xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <AnchorPane layoutX="62.0" layoutY="66.0" prefHeight="442.0" prefWidth="426.0" />
+      <AnchorPane layoutX="62.0" layoutY="66.0" prefHeight="442.0" prefWidth="426.0">
+         <children>
+            <Text fx:id="slideInfoText" layoutX="14.0" layoutY="51.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="252.13671875" />
+         </children></AnchorPane>
       <Label layoutX="168.0" layoutY="28.0" prefHeight="63.0" prefWidth="156.0" text="Preview Pane">
          <font>
             <Font size="23.0" />
