--- a/AdventureGameBuilder/src/edu/augustana/csc285/gamebuilder/PreviewPane.fxml
+++ b/AdventureGameBuilder/src/edu/augustana/csc285/gamebuilder/PreviewPane.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.augustana.csc285.gamebuilder.PreviewPaneController">
    <children>
       <AnchorPane layoutX="62.0" layoutY="66.0" prefHeight="442.0" prefWidth="426.0">
          <children>
