--- a/AdventureGameBuilder/src/edu/augustana/csc285/gamebuilder/PreviewPane.fxml
+++ b/AdventureGameBuilder/src/edu/augustana/csc285/gamebuilder/PreviewPane.fxml
@@ -5,21 +5,22 @@
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.augustana.csc285.gamebuilder.PreviewPaneController">
+<AnchorPane prefHeight="488.0" prefWidth="439.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.augustana.csc285.gamebuilder.PreviewPaneController">
    <children>
       <Label fx:id="previewPane" layoutX="143.0" layoutY="-8.0" prefHeight="63.0" prefWidth="156.0" text="Preview Pane">
          <font>
             <Font size="23.0" />
          </font>
       </Label>
-      <ScrollPane fx:id="scrollPane" layoutX="-25.0" layoutY="41.0" pannable="true" prefHeight="459.0" prefWidth="492.0">
-         <content>
-            <Label fx:id="slideInfoText" prefHeight="25.0" prefWidth="449.0" text="      " />
-         </content>
+      <ScrollPane fx:id="scrollPane" layoutX="19.0" layoutY="41.0" pannable="true" prefHeight="447.0" prefWidth="402.0">
          <cursor>
             <Cursor fx:constant="OPEN_HAND" />
          </cursor>
+         <content>
+            <Text fx:id="slideInfoText" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="398.6708984375" />
+         </content>
       </ScrollPane>
    </children>
 </AnchorPane>
