--- a/AdventureGameBuilder/src/edu/augustana/csc285/gamebuilder/MainPane.fxml
+++ b/AdventureGameBuilder/src/edu/augustana/csc285/gamebuilder/MainPane.fxml
@@ -69,7 +69,6 @@
                         <Label layoutX="289.0" layoutY="29.0" text="Current Slide:" />
                         <Label fx:id="currentSlideLabel" layoutX="405.0" layoutY="29.0" text="N/A" />
                         <Label layoutX="14.0" layoutY="93.0" text="Set Slide Title" />
-                        <TextField fx:id="changeTitleTextField" layoutX="129.0" layoutY="88.0" onAction="#handleChangeTitleTextField" prefHeight="19.0" prefWidth="376.0" />
                         <Line endX="440.0" layoutX="95.0" layoutY="71.0" startX="-100.0" AnchorPane.bottomAnchor="257.5" AnchorPane.leftAnchor="-5.5" AnchorPane.rightAnchor="333.5" AnchorPane.topAnchor="70.5" />
                         <Label layoutX="14.0" layoutY="130.0" text="Set Slide Game Text" />                 
                         <Button fx:id="selectSlideImageButton" layoutX="231.0" layoutY="165.0" mnemonicParsing="false" onAction="#handleSelectSlideImageButton" text="Select a Slide Image" />
@@ -80,6 +79,7 @@
                         <Button fx:id="removeSlideButton" layoutX="234.0" layoutY="241.0" mnemonicParsing="false" onAction="#handleRemoveSlideButton" text="Remove Current Slide" />
                         <Label layoutX="269.0" layoutY="289.0" text="Set Slide Type:" />
                         <ChoiceBox fx:id="setSlideTypeChoiceBox" layoutX="372.0" layoutY="284.0" prefWidth="150.0" />
+                        <TextField fx:id="changeTitleTextField" layoutX="111.0" layoutY="88.0" prefHeight="31.0" prefWidth="342.0" />
                      </children></AnchorPane>
             </content>
           </Tab>
