--- a/AdventureGameBuilder/src/edu/augustana/csc285/gamebuilder/MainPane.fxml
+++ b/AdventureGameBuilder/src/edu/augustana/csc285/gamebuilder/MainPane.fxml
@@ -41,15 +41,12 @@
                      <children>
                   <AnchorPane layoutY="-15.0" prefHeight="359.0" prefWidth="529.0">
                      <children>
-                        <Label layoutX="156.0" layoutY="24.0" text="Game builder...">
+                        <Label layoutX="156.0" layoutY="24.0" text="Curlew Game Builder">
                            <font>
                               <Font name="System Bold" size="21.0" />
                            </font>
                         </Label>
-                        <Button fx:id="addSlideButton" layoutX="30.0" layoutY="47.0" mnemonicParsing="false" onAction="#handleAddSlideButton" text="Add Slide" />
-                        <TextField fx:id="showSlideAtTextField" layoutX="177.0" layoutY="112.0" onAction="#handleShowSlideAtTextField" prefHeight="31.0" prefWidth="73.0" />
-                              <Button fx:id="showSlideListButton" layoutX="37.0" layoutY="184.0" mnemonicParsing="false" onAction="#handleShowSlideListButton" text="Show Slide List" />
-                              <Label layoutX="46.0" layoutY="117.0" text="Show Slide info at.." />
+                        <Button fx:id="addSlideButton" layoutX="55.0" layoutY="82.0" mnemonicParsing="false" onAction="#handleAddSlideButton" prefHeight="49.0" prefWidth="122.0" text="Add Slide" />
                               <Button fx:id="saveButton" layoutX="37.0" layoutY="236.0" mnemonicParsing="false" onAction="#handleSaveButton" prefHeight="25.0" prefWidth="157.0" text="Save" />
                               <Button fx:id="saveAsButton" layoutX="306.0" layoutY="214.0" mnemonicParsing="false" onAction="#handleSaveAsButton" text="SaveAs" />
                               <Button fx:id="loadButton" layoutX="91.0" layoutY="286.0" mnemonicParsing="false" onAction="#handleLoadButton" text="Load" />
