--- a/AdventureGameBuilder/src/edu/augustana/csc285/gamebuilder/MainPane.fxml
+++ b/AdventureGameBuilder/src/edu/augustana/csc285/gamebuilder/MainPane.fxml
@@ -96,6 +96,8 @@
                         <Line endX="430.0" layoutX="99.0" layoutY="100.0" startX="-100.0" />
                         <TextField fx:id="aceSetDestinationSlideIndexField" layoutX="412.0" layoutY="126.0" prefHeight="29.0" prefWidth="81.0" />
                         <ChoiceBox fx:id="selectActionChoiceIndexChoiceBox" layoutX="162.0" layoutY="53.0" prefHeight="22.0" prefWidth="48.0" />
+                        <Button fx:id="addEffectButton" layoutX="220.0" layoutY="214.0" mnemonicParsing="false" onAction="#handleAddEffect" text="AddEffect" />
+                        <ChoiceBox fx:id="effectChiceBox" layoutX="307.0" layoutY="214.0" prefWidth="150.0" />
                      </children>
                   </AnchorPane>
               </content>
