--- a/AdventureGameBuilder/src/edu/augustana/csc285/gamebuilder/MainPane.fxml
+++ b/AdventureGameBuilder/src/edu/augustana/csc285/gamebuilder/MainPane.fxml
@@ -107,6 +107,7 @@
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
                         <Button fx:id="addInventoryButton" layoutX="29.0" layoutY="30.0" mnemonicParsing="false" onAction="#handleAddInventoryButton" text="Add Inventory" />
+                        <Button fx:id="removeInventoryButton" layoutX="29.0" layoutY="76.0" mnemonicParsing="false" onAction="#handleRemoveInventoryButton" text="Remove Inventory" />
                      </children>
                   </AnchorPane>
               </content>
